added the S4 hypot.

--- a/src/lithium/doc/lithium18.tex
+++ b/src/lithium/doc/lithium18.tex
@@ -539,6 +539,37 @@ we write
 \begin{equation}
 		\beta_{x,0}(\tau) = \Theta R(\mu_x\tau) + \eta \dfrac{\rho_x}{\mu_x}  \left[ R(\mu_x\tau) +  B\left(\mu_x\tau,\frac{1}{\mu_x\cos^2\theta}\right)\tan^2\theta\right]\sin^2\theta
 \end{equation}
+We notice that
+\begin{equation}
+	\hat\alpha_0(\tau) = \cos^2\theta + \sin^2\theta e^{-\frac{\tau}{\cos^2\theta}}
+\end{equation}
+and we induction times arising from $\hat\alpha$ are hidden in the $B$ function.
+
+\subsubsection{Single Secondary Separation Speedup Hypothesis}
+
+Each elementary reaction has the same speed up in any way...so that
+\begin{equation}
+\left\lbrace
+ \begin{array}{rcl}
+	k_6          & = & \sigma k_7\\
+	\mu_6        & = & \sigma \mu_7\\
+	\Upsilon_6   & = & k_6^p J_7 = k_6^p k_6^a/k_6^d = \sigma \Upsilon_7\\
+	\rho_6       & = & \sigma \rho_7\\
+	\rho_7       & = & \frac{1}{\epsilon\sigma+(1-\epsilon)} = \rho\\
+	\rho_x/\mu_x & = & \rho_7/\mu_7 = \rho/\mu \\
+\end{array}
+\right.
+\end{equation}
+
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+\beta_{7,0} & \simeq & \Theta R(\tau') +  \dfrac{\eta}{\mu}\dfrac{1}{\sigma\epsilon+(1-\epsilon)}  \left[ R(\tau') +  B\left(\tau',\frac{1}{\mu\cos^2\theta}\right)\tan^2\theta\right]\sin^2\theta\\
+\beta_{6,0} & \simeq & \Theta R(\sigma\tau') +  \dfrac{\eta}{\mu}\dfrac{1}{\sigma\epsilon+(1-\epsilon)}  \left[ R(\sigma\tau') +  B\left(\sigma\tau',\frac{1}{\sigma\mu\cos^2\theta}\right)\tan^2\theta\right]\sin^2\theta\\
+\end{array}
+\right.
+\end{equation}
+
 
 \end{document}
 
