WIP v18, need to take sigma constant and change rho

--- a/src/lithium/doc/lithium18.tex
+++ b/src/lithium/doc/lithium18.tex
@@ -546,7 +546,7 @@ We notice that
 \end{equation}
 and the induction times arising from $\hat\alpha$ are hidden in the $B$ function.
 
-\subsubsection{Single Secondary Separation Speedup Hypothesis}
+\subsubsection{Single Secondary Separation Speedup Hypothesis !!FALSE!!}
 
 Each elementary reaction has the same speed up in any way...so that
 \begin{equation}
