--- a/src/lithium/doc/lithium19.tex
+++ b/src/lithium/doc/lithium19.tex
@@ -84,7 +84,7 @@ and
 \begin{array}{rclcl}
 	\LiOut{6} & = & \dfrac{1}{1+\beta_s \left[1+10^{-3}\deltaLiOut\right] } \LiAllOut & = & \epsilon_6 \LiAllOut  = \epsilon \LiAllOut \\
 	\\
-	\LiOut{7} & = & \dfrac{\beta_s \left[1+10^{-3}\deltaLi\right]}{1+\beta_s \left[1+10^{-3}\deltaLiOut\right] } \LiAllOut & = & \epsilon_7 \LiAll,\;\epsilon_7 = 1-\epsilon \\
+	\LiOut{7} & = & \dfrac{\beta_s \left[1+10^{-3}\deltaLi\right]}{1+\beta_s \left[1+10^{-3}\deltaLiOut\right] } \LiAllOut & = & \epsilon_7 \LiAllOut,\;\epsilon_7 = 1-\epsilon \\
 \end{array}
 \right.
 \end{equation}
@@ -546,30 +546,30 @@ We notice that
 \end{equation}
 and the induction times arising from $\hat\alpha$ are hidden in the $B$ function.
 
-\subsubsection{Single Secondary Separation Speedup Hypothesis !!FALSE!!}
-
-Each elementary reaction has the same speed up in any way...so that
-\begin{equation}
-\left\lbrace
- \begin{array}{rcl}
-	k_6          & = & \sigma k_7\\
-	\mu_6        & = & \sigma \mu_7\\
-	\Upsilon_6   & \propto & k_6^p J_6 = k_6^p k_6^a/k_6^d \propto \sigma \Upsilon_7\\
-	\rho_6       & = & \sigma \rho_7\\
-	\rho_7       & = & \frac{1}{\epsilon\sigma+(1-\epsilon)} = \rho\\
-	\rho_x/\mu_x & = & \rho_7/\mu_7 = \rho/\mu \\
-\end{array}
-\right.
-\end{equation}
-
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-\beta_{7,0} & \simeq & \Theta R(\tau') +  \dfrac{\eta}{\mu}\dfrac{1}{\sigma\epsilon+(1-\epsilon)}  \left[ R(\tau') +  B\left(\tau',\frac{1}{\mu\cos^2\theta}\right)\tan^2\theta\right]\sin^2\theta\\
-\beta_{6,0} & \simeq & \Theta R(\sigma\tau') +  \dfrac{\eta}{\mu}\dfrac{1}{\sigma\epsilon+(1-\epsilon)}  \left[ R(\sigma\tau') +  B\left(\sigma\tau',\frac{1}{\sigma\mu\cos^2\theta}\right)\tan^2\theta\right]\sin^2\theta\\
-\end{array}
-\right.
-\end{equation}
+%\subsubsection{Single Secondary Separation Speedup Hypothesis !!FALSE!!}
+%
+%Each elementary reaction has the same speed up in any way...so that
+%\begin{equation}
+%\left\lbrace
+% \begin{array}{rcl}
+%	k_6          & = & \sigma k_7\\
+%	\mu_6        & = & \sigma \mu_7\\
+%	\Upsilon_6   & \propto & k_6^p J_6 = k_6^p k_6^a/k_6^d \propto \sigma \Upsilon_7\\
+%	\rho_6       & = & \sigma \rho_7\\
+%	\rho_7       & = & \frac{1}{\epsilon\sigma+(1-\epsilon)} = \rho\\
+%	\rho_x/\mu_x & = & \rho_7/\mu_7 = \rho/\mu \\
+%\end{array}
+%\right.
+%\end{equation}
+%
+%\begin{equation}
+%\left\lbrace
+%\begin{array}{rcl}
+%\beta_{7,0} & \simeq & \Theta R(\tau') +  \dfrac{\eta}{\mu}\dfrac{1}{\sigma\epsilon+(1-\epsilon)}  \left[ R(\tau') +  B\left(\tau',\frac{1}{\mu\cos^2\theta}\right)\tan^2\theta\right]\sin^2\theta\\
+%\beta_{6,0} & \simeq & \Theta R(\sigma\tau') +  \dfrac{\eta}{\mu}\dfrac{1}{\sigma\epsilon+(1-\epsilon)}  \left[ R(\sigma\tau') +  B\left(\sigma\tau',\frac{1}{\sigma\mu\cos^2\theta}\right)\tan^2\theta\right]\sin^2\theta\\
+%\end{array}
+%\right.
+%\end{equation}
 
 
 \end{document}
