--- a/src/lithium/doc/lithium19.tex
+++ b/src/lithium/doc/lithium19.tex
@@ -9,7 +9,7 @@
 \usepackage{bookman}
 \usepackage{dsfont}
 \usepackage{mathptmx}
-\usepackage{hyperref}
+%\usepackage{hyperref}
 
 \newcommand{\mychem}[1]{\mathtt{#1}}
 \newcommand{\myconc}[1]{\left\lbrack{#1}\right\rbrack}
@@ -55,7 +55,7 @@
 \newcommand{\LiAllOut}{{\LiAll}_{\mathrm{out}}}
 
 \begin{document}
-\tableofcontents
+%\tableofcontents
 
 \section{Isotopic Separation}
 $$
@@ -102,7 +102,9 @@ with, for the experiments,
 	 \spLiOut{x} +  \spEout  
 	 \xrightleftharpoons[k_x^d]{k_x^a} 
 	 \spLiE{x}
-	  \xrightleftharpoons[k_x^q]{\mychem{+H},\;k_x^p} \underbrace{\spEHin}_{\xrightarrow[]{k_h} \mychem{E} + \mychem{H}_{\mathrm{out}}} + \underbrace{\spLiIn{x}}_{\xrightleftharpoons[]{k_x} \spLiOut{x}}
+	  %\xrightleftharpoons[k_x^q]{\mychem{+H},\;k_x^p} 
+	  \xrightarrow[]{\mychem{+H},\;k_x^p} 
+	  \underbrace{\spEHin}_{\xrightarrow[]{k_h} \mychem{E} + \mychem{H}_{\mathrm{out}}} + \underbrace{\spLiIn{x}}_{\xrightleftharpoons[]{k_x} \spLiOut{x}}
 \end{equation}
 
 \section{Scheme}
@@ -177,18 +179,18 @@ The "slow" rate vector is
 	\partial_t\vec{X}_{slow} = 
 	\begin{pmatrix}
 		v_h\\
-		p_6-q_6+p_7-q_7-v_h\\
-		q_6-p_6\\
-		p_6-l_6-q_6\\
-		q_7-p_7\\
-		p_7-l_7-q_7\\
+		p_6+p_7-v_h\\
+		-p_6\\
+		p_6-l_6\\
+		-p_7\\
+		p_7-l_7\\
 	\end{pmatrix}
 	,\;\;\text{ with }
 	\left\lbrace
 	\begin{array}{rcll}
 	v_h & = & k_h \EHin & \text{(recycling)}\\
 	p_x & = & k_x^p \proton \LiE{x} & \text{(forward transfer)}\\
-	q_x & = & k_x^q \EHin \LiIn{x} & \text{(reverse transfer)} \\
+	%q_x & = & k_x^q \EHin \LiIn{x} & \text{(reverse transfer)} \\
 	l_x & = & k_x  \left(\LiIn{x}-\tilde{\Theta}_x\right) & \text{(leak)}\\
 	\end{array}
 	\right.
@@ -219,9 +221,9 @@ and we find
 	\vec{Y} = \begin{pmatrix} \EHin \cr \LiIn{6} \cr \LiIn{7} \end{pmatrix}
 	,\;\partial_t \vec{Y} = 
 	\begin{pmatrix}
-	p_6-q_6+p_7-q_7-v_h\\
-	p_6-q_6-l_6\\
-	p_7-q_7-l_7
+	p_6+p_7-v_h\\
+	p_6-l_6\\
+	p_7-l_7
 	\end{pmatrix}
 \end{equation}
 with the expressions
@@ -229,7 +231,7 @@ with the expressions
 \left\lbrace
 	\begin{array}{rcl}
 	v_h & = & k_h \EHin \\
-	q_x & = & k_x^q \EHin \Li{x}  \\
+	%q_x & = & k_x^q \EHin \Li{x}  \\
 	l_x & = & k_x  \left(\Li{x}- \tilde{\Theta}_x\right)\\
 	p_x & = & k_x^p \proton \LiE{x}\\
 	\end{array}
@@ -251,13 +253,17 @@ then we get the \underline{three} coupled equations
 \left\lbrace
 	\begin{array}{rcl}
 		\partial_t\EHin & = & -k_h \EHin + \left(E_0- \EHin\right) \dfrac{\proton}{\tilde{D}} \left(\sum_x k_x^p \tilde{J}_x \right)  
-		- \EHin \left\lbrack {\sum_x k_x^q \Li{x}} \right\rbrack\\
+		%- \EHin \left\lbrack {\sum_x k_x^q \Li{x}} \right\rbrack
+		\\
 		\\
 		& = & 
 		-k_h E_0+ \left(E_0- \EHin\right)\left\lbrack k_h+ \dfrac{\proton}{\tilde{D}} \left(\sum_x k_x^p \tilde{J}_x \right)\right] 
-		- \EHin \left\lbrack {\sum_x k_x^q \Li{x}} \right\rbrack\\
+		%- \EHin \left\lbrack {\sum_x k_x^q \Li{x}} \right\rbrack
 		\\
-		\partial_t\Li{x} & = & k_x \left(\tilde{\Theta}_x -\Li{x} \right)  + \left(E_0-\EHin\right) \dfrac{\proton}{\tilde{D}}   k_x^p \tilde{J}_x  - \EHin k_x^q \Li{x}\\
+		\\
+		\partial_t\Li{x} & = & k_x \left(\tilde{\Theta}_x -\Li{x} \right)  + \left(E_0-\EHin\right) \dfrac{\proton}{\tilde{D}}   k_x^p \tilde{J}_x  
+		%- \EHin k_x^q \Li{x}
+		\\
 	\end{array}
 \right.
 %}
@@ -280,29 +286,34 @@ Leading to
 \left\lbrace
 \begin{array}{rcl}
 \partial_t\alpha & = & -k_h \alpha + \left(1- \alpha\right) \dfrac{\proton}{\tilde{D}} \left(\sum_x k_x^p \tilde{J}_x \right)  
-		- \alpha \left\lbrack {\sum_x k_x^q \Li{x}} \right\rbrack\\
+		%- \alpha \left\lbrack {\sum_x k_x^q \Li{x}} \right\rbrack
+		\\
 		\\
 		& = & 
 		-k_h + \left(1- \alpha\right)\left\lbrack k_h+ \dfrac{\proton}{\tilde{D}} \left(\sum_x k_x^p \tilde{J}_x \right)\right] 
-		- \alpha \left\lbrack {\sum_x k_x^q \Li{x}} \right\rbrack\\\end{array}
+		%- \alpha \left\lbrack {\sum_x k_x^q \Li{x}} \right\rbrack
+		\\
+		\end{array}
 \right.
 \end{equation}
 or
 \begin{equation}
 	\partial_t \hat\alpha = k_h - \hat\alpha \left\lbrack k_h+ \dfrac{\proton}{\tilde{D}} \left(\sum_x k_x^p \tilde{J}_x \right)\right] 
-		+ (1-\hat\alpha) \left\lbrack {\sum_x k_x^q \Li{x}} \right\rbrack
+		%+ (1-\hat\alpha) \left\lbrack {\sum_x k_x^q \Li{x}} \right\rbrack
 \end{equation}
-	
+where $\hat\alpha$ is the \underline{fraction of not-protonated NHE}.
 
 \subsection{Second Simplification}
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-\partial_t\Li{x} & = & k_x \left(\tilde{\Theta}_x -\Li{x} \right)  + \left(E_0-\EHin\right) \dfrac{\proton}{\tilde{D}}   k_x^p \tilde{J}_x  - \EHin k_x^q \Li{x}\\
+\partial_t\Li{x} & = & k_x \left(\tilde{\Theta}_x -\Li{x} \right)  + \left(E_0-\EHin\right) \dfrac{\proton}{\tilde{D}}   k_x^p \tilde{J}_x % - \EHin k_x^q \Li{x}
+\\
  &=&   \LiOut{x} \left( k_x
  	\left[\Theta-\dfrac{\Li{x}}{\LiOut{x}}\right] 
 	+ \left(1-\alpha\right) E_0 \proton \dfrac{ k_x^p J_x}{\tilde{D}}
- - \alpha  E_0 k_x^q \dfrac{\Li{x}}{\LiOut{x}} \right) \\
+ %- \alpha  E_0 k_x^q \dfrac{\Li{x}}{\LiOut{x}}
+  \right) \\
 \end{array}
 \right.
 \end{equation}
@@ -319,9 +330,11 @@ Leading to
 \left\lbrace
 \begin{array}{rcl}
 \partial_t \beta_x + k_x \beta_x 
-& = & k_x \Theta  + \left(1-\alpha\right) \dfrac{ k_x^p J_x}{\tilde{D}} E_0 \proton  - \alpha E_0 k_x^q \beta_x \\
+& = & k_x \Theta  + \left(1-\alpha\right) \dfrac{ k_x^p J_x}{\tilde{D}} E_0 \proton  %- \alpha E_0 k_x^q \beta_x
+ \\
 \\
-& = & k_x \Theta  +  \hat\alpha \dfrac{ k_x^p J_x}{\tilde{D}} E_0 \proton  -  \left(1-\hat\alpha\right) E_0 k_x^q \beta_x \\
+& = & k_x \Theta  +  \hat\alpha \dfrac{ k_x^p J_x}{\tilde{D}} E_0 \proton  %-  \left(1-\hat\alpha\right) E_0 k_x^q \beta_x
+ \\
 \end{array}
 \right.
 \end{equation}
@@ -345,10 +358,12 @@ we get
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-\partial_t \beta_x  & = &  k_x \left(\Theta -\beta_x \right) +  \eta \left[ \hat\alpha \dfrac{ k_x^p J_x}{\tilde{D}} \LiAllOut \proton  -  \left(1-\hat\alpha\right) \LiAllOut k_x^q \beta_x \right] \\
+\partial_t \beta_x  & = &  k_x \left(\Theta -\beta_x \right) + \eta \hat\alpha \dfrac{ k_x^p J_x}{\tilde{D}} \LiAllOut \proton\\
+ %\eta \left[ \hat\alpha \dfrac{ k_x^p J_x}{\tilde{D}} \LiAllOut \proton  -  \left(1-\hat\alpha\right) \LiAllOut k_x^q \beta_x \right] \\
 \\
 	\partial_t \hat\alpha & = & k_h - \hat\alpha \left\lbrack k_h+ \dfrac{\proton}{\tilde{D}} \left(\sum_x \epsilon_x k_x^p J_x \right) \LiAllOut \right] 
-		+ (1-\hat\alpha) \left\lbrack {\sum_x k_x^q \epsilon_x \beta_x }  \right\rbrack \LiAllOut \\
+		%+ (1-\hat\alpha) \left\lbrack {\sum_x k_x^q \epsilon_x \beta_x }  \right\rbrack \LiAllOut 
+		\\
 \end{array}
 \right.
 \end{equation}
@@ -369,7 +384,7 @@ We define
 	\Upsilon_x & = & \dfrac{k_x^pJ_x \LiAllOut}{k_h \tilde{D}}
 	 = \dfrac{k_x^pJ_x \LiAllOut}{k_h\left(1+ J_\epsilon\LiAllOut\right)} \;\; (\text{in M}^{-1}),\;\; J_\epsilon= \epsilon J_6 + (1-\epsilon) J_7\\
 	 \\
-	 Q_x & = & \dfrac{k_x^q \LiAllOut}{k_h} \;\; (\text{a scalar})\\
+	% Q_x & = & \dfrac{k_x^q \LiAllOut}{k_h} \;\; (\text{a scalar})\\
 \end{array}
 \right.
 \end{equation}
@@ -377,74 +392,68 @@ so that
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-\partial_\tau \beta_x  & = &  \mu_x \left(\Theta -\beta_x \right) +  \eta \left[ \hat\alpha \proton \Upsilon_x  -  \left(1-\hat\alpha\right) Q_x\beta_x \right] \\
+\partial_\tau \beta_x  & = &  \mu_x \left(\Theta -\beta_x \right) + \eta \hat\alpha \proton \Upsilon_x \\
+% \eta \left[ \hat\alpha \proton \Upsilon_x  -  \left(1-\hat\alpha\right) Q_x\beta_x \right] \\
 \\
 	\partial_\tau \hat\alpha & = & 1 - 
-		\hat\alpha \left\lbrack 1+ \proton \left(\sum_x \epsilon_x \Upsilon_x \right)\right] 
-		+ (1-\hat\alpha) \left\lbrack {\sum_x  \epsilon_x Q_x \beta_x }  \right\rbrack \\
+		\hat\alpha \left\lbrack 1+ \proton \left(\sum_x \epsilon_x \Upsilon_x \right)\right] \\
+		%+ (1-\hat\alpha) \left\lbrack {\sum_x  \epsilon_x Q_x \beta_x }  \right\rbrack \\
 \end{array}
 \right.
 \end{equation}
 
 \section{Steady State and consequences}
-\subsection{Generic case}
+\subsection{Coupled Expression}
 We get the system of equations
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-	\beta_x^\infty & = & \dfrac{\mu_x\Theta + \eta \hat\alpha_\infty h_\infty \Upsilon_x}{\mu_x + \eta (1-\hat\alpha_\infty) Q_x}\\
+	\beta_x^\infty & = & %\dfrac{\mu_x\Theta + \eta \hat\alpha_\infty h_\infty \Upsilon_x}{\mu_x + \eta (1-\hat\alpha_\infty) Q_x}\\
+		\Theta + \eta \dfrac{\hat\alpha_\infty h_\infty \Upsilon_x}{\mu_x}\\
 	\\
-	\hat\alpha_\infty & = & \dfrac{1+\sum_x\epsilon_x Q_x\beta_x^\infty}{1 + \left(\sum_x \epsilon_x h_\infty \Upsilon_x \right) + \sum_x\epsilon_x Q_x\beta_x^\infty}\\
+	\hat\alpha_\infty & = & \dfrac{1%%\sum_x\epsilon_x Q_x\beta_x^\infty
+	}{1 + \left(\sum_x \epsilon_x h_\infty \Upsilon_x \right) %+ \sum_x\epsilon_x Q_x\beta_x^\infty
+	}\\
 \end{array}
 \right.
 \end{equation}
-and $\hat\alpha_\infty$ may be expressed as the solution of a second order polynomial....
+%and $\hat\alpha_\infty$ may be expressed as the solution of a second order polynomial....
 
-\subsection{Low quadratic values (a.k.a linear case)}
-In that case,
-\begin{equation}
-		\hat\alpha_1^\infty \simeq \dfrac{1}{1+\left(\sum_x \epsilon_x h_\infty \Upsilon_x \right)}
-\end{equation}
-and 
-\begin{equation}
-	\beta_{x,1}^\infty \simeq \Theta + \dfrac{\eta}{\mu_x}  h_\infty \Upsilon_x \hat\alpha_1^\infty
-\end{equation}
-is greater that $\Theta$
-\subsection{High quadratic values}
-In that case,
-\begin{equation}
-	\hat\alpha_2^\infty \simeq 1
-\end{equation}
-and we can show that \underline{mathematically} and because the catalytic path becomes a fast reversible path,
-\begin{equation}
-	\beta_{x,2}^\infty \simeq \Theta 
-\end{equation}
+%\subsection{Low quadratic values (a.k.a linear case)}
+%In that case,
+%\begin{equation}
+%		\hat\alpha_1^\infty \simeq \dfrac{1}{1+\left(\sum_x \epsilon_x h_\infty \Upsilon_x \right)}
+%\end{equation}
+%and 
+%\begin{equation}
+%	\beta_{x,1}^\infty \simeq \Theta + \dfrac{\eta}{\mu_x}  h_\infty \Upsilon_x \hat\alpha_1^\infty
+%\end{equation}
+%is greater that $\Theta$
+%\subsection{High quadratic values}
+%In that case,
+%\begin{equation}
+%	\hat\alpha_2^\infty \simeq 1
+%\end{equation}
+%and we can show that \underline{mathematically} and because the catalytic path becomes a fast reversible path,
+%\begin{equation}
+%	\beta_{x,2}^\infty \simeq \Theta 
+%\end{equation}
 
-\section{Short Times Behavior}
+%\section{Short Times Behavior}
+%
+%\begin{equation}
+%	\left.\dfrac{\beta_7}{\beta_6}\right|_{\tau\to0} = \dfrac{\mu_7 \Theta + \eta h_0 \Upsilon_7 }{\mu_6 \Theta + \eta h_0 \Upsilon_6 }
+%\end{equation}
+%while the leak-only ratio is
+%\begin{equation}
+%	\left.\dfrac{\beta_7}{\beta_6}\right|_{\tau\to0}^{leak} = \dfrac{\mu_7}{\mu_6} = \dfrac{k_7}{k_6}
+%\end{equation}
+%And we can have a better isotopic separation if
+%\begin{equation}
+%\dfrac{k_7^pJ_7}{k_6^pJ_6}<\dfrac{k_7}{k_6}
+%\end{equation}
 
-\begin{equation}
-	\left.\dfrac{\beta_7}{\beta_6}\right|_{\tau\to0} = \dfrac{\mu_7 \Theta + \eta h_0 \Upsilon_7 }{\mu_6 \Theta + \eta h_0 \Upsilon_6 }
-\end{equation}
-while the leak-only ratio is
-\begin{equation}
-	\left.\dfrac{\beta_7}{\beta_6}\right|_{\tau\to0}^{leak} = \dfrac{\mu_7}{\mu_6} = \dfrac{k_7}{k_6}
-\end{equation}
-And we can have a better isotopic separation if
-\begin{equation}
-\dfrac{k_7^pJ_7}{k_6^pJ_6}<\dfrac{k_7}{k_6}
-\end{equation}
-
-
-\section{Solutions}
-
-\begin{itemize}
-\item ?????
-\item $\proton$ is almost constant or decreasing
-\item $\beta_x$ is mostly increasing
-\end{itemize}
-
-\section{Linear Case}
-
+\section{Solving}
 \subsection{Solving $\hat\alpha$}
 
 \subsubsection{Generic $\proton$}
@@ -458,7 +467,7 @@ And we can have a better isotopic separation if
 \end{equation}
 
 \begin{equation}
-	\hat\alpha_1^\infty = \dfrac{1}{1+h_\infty \Upsilon_\alpha}
+	\hat\alpha_\infty = \dfrac{1}{1+h_\infty \Upsilon_\alpha}
 \end{equation}
 
 \subsubsection{Constant $\proton$}
