--- a/src/lithium/doc/lithium19.tex
+++ b/src/lithium/doc/lithium19.tex
@@ -498,10 +498,11 @@ We set
 \begin{array}{rcl}
 	\Omega & = & 1 + h_0 \Upsilon_\alpha = 1 + \tan^2 \theta\\
 	h_0 \Upsilon_x & = & \rho_x \, \tan^2\theta\\
-	\rho_x & = & \dfrac{\Upsilon_x}{\epsilon\Upsilon_6+(1-\epsilon)\Upsilon_7} (\simeq 1) \\
+	\rho_x & = & \dfrac{\Upsilon_x}{\epsilon\Upsilon_6+(1-\epsilon)\Upsilon_7}\\
 \end{array}
 \right.
 \end{equation}
+and we express
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
