need to make exponential sim...

--- a/src/lithium/doc/lithium19.tex
+++ b/src/lithium/doc/lithium19.tex
@@ -562,7 +562,19 @@ and the induction times arising from $\hat\alpha$ are hidden in the $B$ function
 \left\lbrace
 \begin{array}{rcl}
 	\partial_\tau \hat\alpha & = & 1 - \hat\alpha(\tau) \left[ 1 + \dfrac{\proton}{h_0} \tan^2\theta\right]\\
+	\\
 	\partial_\tau \beta_x    & = & \mu_x\left[\Theta-\beta_x(\tau)\right] + \hat\alpha(\tau) \underbrace{\eta \rho_x}_{\varphi_x} \dfrac{\proton}{h_0} \tan^2\theta
+	\\
+	\\
+	\hline
+	\\
+	\mu_6     & = & \sigma \mu_7\\
+	\varphi_6 & = & \kappa \varphi_7\\
+	\\
+	\hline
+	\\
+	\Theta    & = & e^{\frac{FV_m}{RT}} \simeq 4.47\\
+	\sigma    & \simeq & 1.00229 \\
 \end{array}
 \right.
 \end{equation}
