need to change index for li-tot

--- a/src/lithium/doc/lithium19.tex
+++ b/src/lithium/doc/lithium19.tex
@@ -578,6 +578,10 @@ and the induction times arising from $\hat\alpha$ are hidden in the $B$ function
 \end{array}
 \right.
 \end{equation}
+And for a given $\LiAllOut$,
+\begin{equation}
+	\LiAll = \left[ \epsilon \beta_6 + (1-\epsilon) \beta_7 \right] \LiAllOut
+\end{equation}
 
 \end{document}
 
