--- a/src/lithium/doc/lithium19.tex
+++ b/src/lithium/doc/lithium19.tex
@@ -583,6 +583,9 @@ And for a given $\LiAllOut$,
 	\LiAll = \left[ \epsilon \beta_6 + (1-\epsilon) \beta_7 \right] \LiAllOut
 \end{equation}
 
+TODO: potential influence....
+
+
 \end{document}
 
 
