worked for a sample...

--- a/src/lithium/doc/lithium19.tex
+++ b/src/lithium/doc/lithium19.tex
@@ -558,6 +558,7 @@ and the induction times arising from $\hat\alpha$ are hidden in the $B$ function
 
 \section{Simulation...}
 
+\subsection{Reduced Equation}
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
@@ -585,6 +586,32 @@ And for a given $\LiAllOut$,
 
 TODO: potential influence....
 
+\subsection{Constraints}
+\subsubsection{Initial Values}
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	\rho_0 & = &  \dfrac{\beta_7(0)}{\beta_6(0)} = \dfrac{\mu_7 \Theta + \varphi_7 \tan^2\theta}{\mu_6 \Theta + \varphi_6 \tan^2\theta} \\
+		\\
+		& = &  \dfrac{\mu_7 \Theta + \varphi_7 \tan^2\theta}{\sigma\mu_7 \Theta + \kappa\varphi_7 \tan^2\theta}\\
+		\\
+	\Rightarrow	\kappa & =  & \dfrac{\mu_7\Theta \left(1-\rho_0\sigma\right) + \varphi_7 \tan^2\theta}{\rho_0\varphi_7 \tan^2\theta} \\
+\end{array}
+\right.
+\end{equation}
+
+\subsubsection{Final Values}
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	\rho_\infty & = &  \dfrac{\beta_7^\infty}{\beta_6^\infty} = \dfrac{\mu_7 \Theta + X \varphi_7 \tan^2\theta}{\mu_6 \Theta + X \varphi_6 \tan^2\theta} \\
+	\\
+	X & = & \hat\alpha_\infty \dfrac{h_\infty}{h_0}\\
+	\\
+	\Rightarrow	X & = & \\
+\end{array}
+\right.
+\end{equation}
 
 \end{document}
 
