--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -326,11 +326,11 @@ Leading to
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-\partial_t \beta_x + k_x \beta_x 
-& = & k_x \Theta  + \left(1-\alpha\right) \dfrac{ k_x^p J_x}{\tilde{D}} E_0 \proton  %- \alpha E_0 k_x^q \beta_x
+\partial_t \beta_x 
+& = & k_x (\Theta-\beta_x)  + \left(1-\alpha\right) \dfrac{ k_x^p J_x}{\tilde{D}} E_0 \proton  - \alpha E_0 k_x^q \beta_x
  \\
 \\
-& = & k_x \Theta  +  \hat\alpha \dfrac{ k_x^p J_x}{\tilde{D}} E_0 \proton  %-  \left(1-\hat\alpha\right) E_0 k_x^q \beta_x
+& = & k_x (\Theta-\beta_x)  +  \hat\alpha \dfrac{ k_x^p J_x}{\tilde{D}} E_0 \proton  -  \left(1-\hat\alpha\right) E_0 k_x^q \beta_x
  \\
 \end{array}
 \right.
