--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -456,6 +456,21 @@ We get the system of equations
 	\item and we have three steady state relations...
 \end{itemize}
 
+\subsection{Choosing Parameters}
+
+We start by the initial guess
+\begin{equation}
+	1+\tan^2\theta_0 = 1+\left(\sum_x \epsilon_x h_0 \Upsilon_x \right) = \dfrac{1}{\cos^2\theta_0}
+\end{equation}
+Then if we change $h_0$ to $h_\infty$,
+\begin{equation}
+	1+\tan^2\theta_\infty = 1+\left(\sum_x \epsilon_x h_\infty \Upsilon_x \right)
+\end{equation}
+so that
+\begin{equation}
+	\cos^2\theta_\infty \leq \hat\alpha_\infty \leq 1
+\end{equation}
+
 \section{Solving}
 \color{blue}
 \subsection{Solving $\hat\alpha$}
