--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -429,6 +429,7 @@ only depends on the linear part...
 \subsection{Steady State}
 We get the system of equations
 \begin{equation}
+\label{eq:steady}
 \left\lbrace
 \begin{array}{rcl}
 	\beta_x^\infty & = & \dfrac{\mu_x\Theta + \eta \hat\alpha_\infty h_\infty \Upsilon_x}{\mu_x + \eta (1-\hat\alpha_\infty) Q_x}\\\
@@ -460,11 +461,15 @@ We get the system of equations
 
 We start by the initial guess
 \begin{equation}
+\boxed{
 	1+\tan^2\theta_0 = 1+\left(\sum_x \epsilon_x h_0 \Upsilon_x \right) = \dfrac{1}{\cos^2\theta_0}
+	}
 \end{equation}
 Then if we change $h_0$ to $h_\infty$,
 \begin{equation}
+\boxed{
 	1+\tan^2\theta_\infty = 1+\left(\sum_x \epsilon_x h_\infty \Upsilon_x \right),\;\;\tan^2\theta_\infty=\dfrac{h_\infty}{h_0} \tan^2\theta_0
+	}
 \end{equation}
 so that
 \begin{equation}
@@ -472,12 +477,27 @@ so that
 \end{equation}
 and we can define the coupling factor $\psi$ such that
 \begin{equation}
+\boxed{
 	\hat\alpha_\infty = \cos^2\theta_\infty \cos^2 \psi + \sin^2\psi,\;\;1-\hat\alpha_\infty=\sin^2\theta_\infty \cos^2\psi
+	}
 \end{equation}
 Meaning that
 \begin{equation}
+\boxed{
 	\sum_x \epsilon_x Q_x \beta_x^\infty = (1+\tan^2\theta_\infty) \tan^2 \psi
+	}
 \end{equation}
+If we sum the $\beta_x^\infty$ from \eqref{eq:steady} with the weights $\epsilon_x$, we get
+\begin{equation}
+	\left(\sum_x \epsilon_x \mu_x \beta_x^\infty \right) + \eta \left(1-\hat\alpha_\infty\right) \left(\sum_x\epsilon_x Q_x \beta_x^\infty\right)
+	= \Theta \left(\sum_x \epsilon_x\mu_x\right) + \eta \hat\alpha_\infty \left(\sum_x \epsilon_x h_\infty \Upsilon_x \right)
+\end{equation}
+or
+\begin{equation}
+	\sum_x\epsilon_x \mu_x \left(\beta_x-\Theta\right)  = \eta \left[ \hat\alpha_\infty\tan^2\theta_\infty - (1-\hat\alpha_\infty) (1+\tan^2\theta_\infty) \tan^2 \psi\right] 
+\end{equation}
+
+
 
 \section{Solving}
 \color{blue}
