--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -516,16 +516,26 @@ the catalytic ratio is
 \end{equation}
 }
 
+\item We also have
+\begin{equation}
+\left\lbrace
+	\begin{array}{rcl}
+	\hat\alpha_\infty & = & \cos^2 \psi = 1-\sin^2\psi\\
+	\\
+	\sin^2\psi & = & \dfrac{1}{\eta} \left( \sum_x \epsilon_x \mu_x \left[\beta_x - \Theta\right]\right)
+	\end{array}
+\right.
+\end{equation}
+
 \item From \eqref{eq:steady} we deduce the expression of individual $Q_x$ from
 \begin{equation}
 	\label{eq:Qx}
 	\eta \left(1-\hat\alpha_\infty\right) \beta_x Q_x = \mu_x \left(\Theta-\beta_x\right) + \eta \hat\alpha_\infty h_\infty \Upsilon_x
 \end{equation}
-\item
 \end{itemize}
 
 
-
+\end{document}
 
 \section{Solving}
 \color{blue}
